<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_bg"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextPrimary"
            android:padding="3dp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:text="@string/title_collection_widget" />

        <TextView
            android:id="@+id/widget_title_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextPrimary"
            android:padding="3dp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:text="@string/title_recipe" />

    </LinearLayout>
        <ListView
            android:id="@+id/widgetListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:divider="#70eeeeee" />
</LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/widget_item_background"
        android:textColor="#ffffff"
        android:textStyle="bold"

        android:text="@string/widget_empty_text"
        android:textSize="20sp" />
</FrameLayout>
