<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clipToPadding="true"
    app:cardCornerRadius="1dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/recipeStepPosition"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|start"
                android:padding="@dimen/recipe_details_ingredients_tv_padding"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/recipe_details_ingredients"
                android:textSize="@dimen/recipe_details_step_tv_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="8dp"
                android:visibility="gone"
                android:layout_marginRight="8dp"
                android:background="#90777777" />
        </LinearLayout>

        <TextView
            android:id="@+id/recipeStepPosition"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_step_position_shape"
            android:gravity="center"
            android:text="@string/_12"
            android:textColor="@android:color/white"
            android:textSize="@dimen/recipe_details_step_position_tv_size"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/image"
            android:gravity="center"
            android:src="@drawable/ic_videocam"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>
</android.support.v7.widget.CardView>